--- a/controllers/robot_controller_example.yaml
+++ b/controllers/robot_controller_example.yaml
@@ -16,7 +16,7 @@ diff_controller:
     wheels_per_side: 1
     wheel_separation: 0.415
     wheel_radius: 0.1
-    base_frame_id: base_link0
+    base_frame_id: base_link
     use_stamped_vel: false
 
     linear.x.has_velocity_limits: false
